# Pickspredicts

./: .env.example  .gitignore  .gitmodules  pyproject.toml
.github/workflows/: deploy-cloudflare-pages.yml
configs/: pipeline.yaml
data/autoresearch/optuna/: best_config.json  trial_history.json
data/autoresearch/run_002/: best_config.json  results.jsonl
data/autoresearch/run_003/: best_config.json  results.jsonl
data/model/: calibration.json  feature_cols.json  feature_importance.csv  metrics.json  model.txt  predictions.json  predictions.parquet  predictions_2026_settled.json
data/tmp/: predictions_before_rerun_11_12.json  predictions_merged_pre_settle.json  predictions_merged_pre_settle_final.json  predictions_site_before_rerun_11_12_13.json  predictions_site_pre_final_rerun.json
docs/: AINTREE_2026_PLAN.md  AUTORESEARCH_GUIDANCE.md  LOCAL_MODEL_CLOUDFLARE_DEPLOY.md  PRD.md
scripts/: autoresearch.py  backtest_festival_years.py  build_2025_site_data.py  compare_recency_weighting.py  compare_v4_variants.py  isolate_v3_market.py  optuna_search.py  run_local_publish.py  settle_predictions.py
site/: package-lock.json  package.json  tailwind.config.mjs
site/public/: predictions.json
site/src/: types.ts
src/: pipeline.py
src/features/: build_features.py  parse_comments.py  racecard.py
src/ingest/: fetch_betfair_historical.py  fetch_betfair_odds.py  fetch_racecards.py  fetch_results.py  racecard_health.py
src/model/: calibration.py  feature_groups.py  predict.py  sample_weights.py  train.py
src/transform/: normalise.py
(+43 files in other folders)
